--- a/src/pages/maps/maps.scss
+++ b/src/pages/maps/maps.scss
@@ -1,8 +1,10 @@
-// ion-app._gmaps_cdv_ .nav-decor{
-//   background-color: transparent !important;
-// }
 page-maps {
-  #map {
+    .scroll {
+        height: 100%
+    }
+
+    #map {
+        width: 100%;
         height: 100%;
     }
 }
